added github link in the report and acknowledgements complete

--- a/report/report.tex
+++ b/report/report.tex
@@ -57,7 +57,7 @@
 		
 		\vspace{1cm}
 		
-		\textbf{Date:} 14 September, 2024}}
+		\textbf{Date:} September 23, 2024}}
         \vspace{1cm}
 		\rule{\textwidth}{0.4pt}
         \begin{figure}[hb]
@@ -504,7 +504,13 @@ numerical technique for solving time-dependent nonlinear partial differential eq
 complex dynamics of wave phenomena. The project demonstrates the power of computational methods in exploring
 nonlinear wave interactions and the impact of fractional derivatives on wave propagation. Future work could involve
 extending the simulation to higher dimensions, exploring additional potential profiles, and investigating the
-interplay between nonlinearity and dispersion in wave dynamics.
+interplay between nonlinearity and dispersion in wave dynamics.\\
+
+I would like to express my sincere gratitude to Prof. Dr. Johannes Berg for his invaluable guidance and 
+support during this intensive week. The experience of working on the assigned tasks has been both 
+enlightening and inspiring.\\
+
+The code for this project can be found at \href{https://github.com/sahilugale/julia-intensive-week.git}{GitHub}.
 
 \bibliographystyle{plain}
 \bibliography{references}
