--- a/report/report.tex
+++ b/report/report.tex
@@ -1,3 +1,7 @@
+% Author: Sahil Ugale
+% Created: 10, September 2024
+
+
 \documentclass[8pt, a4paper, twocolumn]{article}
 \usepackage[english]{babel}
 \usepackage{graphicx}
@@ -43,19 +47,23 @@
 		\rule{\textwidth}{0.4pt}
 
 		\vspace{1cm}
-		\textbf{\Huge Intensive week: Coding in Julia!\\[1ex]
+		\textbf{\Large Intensive week: Coding in Julia!\\[1ex]
 		    \Large{An introduction for Master's students}}
+
+		\vspace{1cm}
+		\textbf{\Huge The Normalized Nonlinear Fractional Schrödinger Equation (NNFSE)\\[1ex]
+				\Large Numerical Simulation}
 		    
 		\vspace{1cm}
 		{\Large\underline{\textbf{Author:} Sahil Ugale}}\\
 		\vspace{0.2cm}
 		Matriculation Number - \underline{7406884}
 		
-		\vspace{1cm}
+		\vspace{0.5cm}
 		{\large{
 		\textbf{Supervisor:} Prof. Dr. Johannes Berg
 		
-		\vspace{1cm}
+		\vspace{0.5cm}
 		
 		\textbf{Date:} September 23, 2024}}
         \vspace{1cm}
